--- a/templates/hello.html
+++ b/templates/hello.html
@@ -799,12 +799,12 @@
       <section class="main-content">
         <div class="ai-demo">
           <img
-            src="https://raw.githubusercontent.com/Adarshagupta/BookAI/main/book.png"
+            src="https://raw.githubusercontent.com/Adarshagupta/BookAI/main/book2.png"
             alt="AI Book Generator"
           />
           <div class="floating-ui top-left">
             <div class="floating-icon"></div>
-            <span>AI is generating!</span>
+            <img src="https://raw.githubusercontent.com/Adarshagupta/BookAI/main/public-assets/paradox.png" alt="" sizes="" srcset="" width="90px" height="130px">
           </div>
           <div class="floating-ui bottom-right">
             <div class="floating-icon"></div>
