--- a/templates/hello.html
+++ b/templates/hello.html
@@ -932,6 +932,17 @@
         </div>
       </section>
 
+      <section class="main-content">
+        <div class="ai-demo">
+          <div style="position: relative; padding-bottom: calc(47.46527777777778% + 41px); height: 0; width: 100%;"><iframe src="https://demo.arcade.software/OvUdnIEhwNxssQsB3COY?embed&show_copy_link=true" title="BookAI: Revolutionary AI-Powered Book Generation | Create Professional Books in Minutes" frameborder="0" loading="lazy" webkitallowfullscreen mozallowfullscreen allowfullscreen allow="clipboard-write" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;color-scheme: light;"></iframe></div>
+          
+          <div class="floating-ui bottom-right">
+            <div class="floating-icon"></div>
+            <span>Chapter complete</span>
+          </div>
+        </div>
+      </section>
+
       <!-- ... (remaining content stays the same) ... -->
 
       <section id="roadmap" class="roadmap">
