--- a/templates/index.html
+++ b/templates/index.html
@@ -94,8 +94,7 @@
         <div
             class="w-full lg:w-96 bg-white shadow-2xl p-6 lg:p-8 flex flex-col rounded-3xl transition-all duration-300 hover:shadow-3xl mobile-full-width glass-effect">
             <div class="flex justify-between items-center mb-6 lg:mb-10">
-                <img src="https://raw.githubusercontent.com/Adarshagupta/BookAI/main/logo.png" alt="BookAI Logo"
-                    class="w-12 h-10">
+               
                 <button id="profile-button" class="text-gray-600 hover:text-gray-800 mr-4">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
                         stroke="currentColor">
@@ -103,6 +102,8 @@
                             d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
                     </svg>
                 </button>
+                <img src="https://raw.githubusercontent.com/Adarshagupta/BookAI/main/logo.png" alt="BookAI Logo"
+                class="w-12 h-10">
                 <button id="settings-button" class="text-gray-600 hover:text-gray-800">
                     <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24"
                         stroke="currentColor">
@@ -133,7 +134,7 @@
                             <option value="gpt-4-turbo">GPT-4-turbo</option>
                             <option value="gpt-4o-mini-2024-07-18">GPT-4o Mini (2024-07-18)</option>
                         </optgroup>
-                        <optgroup label="Together Models" id="together-models">
+                        <optgroup label="BookAI Models" id="together-models">
                             <option value="meta-llama/Meta-Llama-3.1-8B-Instruct-Turbo">BookAI-8B-Instruct-Turbo</option>
                             <option value="meta-llama/Meta-Llama-3.1-70B-Instruct-Turbo">BookAI-70B-Instruct-Turbo</option>
                         </optgroup>
