--- a/templates/hello.html
+++ b/templates/hello.html
@@ -794,6 +794,8 @@
           Download, Distribute wherever you want. Generate unlimited free books
         </p>
         <a href="/playground" class="cta">Get Started</a>
+        <a href="/api" class="cta">Get API Access</a>
+
       </section>
 
       <section class="main-content">
